# OpenModelica

./: Jenkinsfile
OMCompiler/: Makefile.common
OMCompiler/Compiler/.cmake/: meta_modelica_source_list.cmake  template_compilation.cmake
OMCompiler/Compiler/BackEnd/: BackendDAEUtil.mo  FindZeroCrossings.mo  RemoveSimpleEquations.mo  Tearing.mo
OMCompiler/Compiler/FrontEnd/: Absyn.mo  DAE.mo  ExpressionSimplify.mo  ModelicaBuiltin.mo
OMCompiler/Compiler/NBackEnd/: NBDifferentiate.mo
OMCompiler/Compiler/NBackEnd/Modules/1_Main/: NBInitialization.mo
OMCompiler/Compiler/NFFrontEnd/: NFBuiltinFuncs.mo  NFCall.mo  NFCeval.mo  NFComponentRef.mo  NFEvalFunction.mo  NFExpression.mo  NFFlatModel.mo  NFFlatten.mo  NFFunction.mo  NFInst.mo  NFInstNode.mo  NFModelicaBuiltin.mo  NFSimplifyExp.mo  NFVariable.mo
OMCompiler/Compiler/NSimCode/: NSimCode.mo  NSimVar.mo
OMCompiler/Compiler/Script/: CevalScript.mo  CevalScriptBackend.mo
OMCompiler/Compiler/SimCode/: SimCode.mo  SimCodeFunctionUtil.mo  SimCodeMain.mo  SimCodeUtil.mo
OMCompiler/Compiler/Template/: CodegenC.tpl  CodegenCFunctions.tpl  CodegenCppInit.tpl  CodegenFMU.tpl  CodegenFMU2.tpl  CodegenFMUCommon.tpl  CodegenFMUCpp.tpl  CodegenFMUCppHpcom.tpl  CodegenFMUCppHpcomOMSI.tpl  CodegenFMUCppOMSI.tpl  CodegenOMSIC.tpl  CodegenUtil.tpl  SimCodeTV.mo
OMCompiler/Compiler/Util/: Flags.mo  FlagsUtil.mo  List.mo
OMCompiler/Compiler/boot/: LoadCompilerSources.mos
OMCompiler/Compiler/runtime/: FMI2Impl.c  FMI2Impl.h  FMIImpl.c  Makefile.common
OMCompiler/SimulationRuntime/: CMakeLists.txt
OMCompiler/SimulationRuntime/OMSI/: CMakeLists.txt
OMCompiler/SimulationRuntime/OMSI/base/: CMakeLists.txt
OMCompiler/SimulationRuntime/OMSI/solver/: CMakeLists.txt
OMCompiler/SimulationRuntime/OMSI/solver/include/: solver_api.h  solver_helper.h  solver_kinsol.h  solver_lapack.h
OMCompiler/SimulationRuntime/OMSI/solver/src/: solver_api.c  solver_helper.c  solver_kinsol.c  solver_lapack.c
OMCompiler/SimulationRuntime/OMSIC/: CMakeLists.txt
OMCompiler/SimulationRuntime/c/: CMakeLists.txt  Makefile.common  Makefile.objs  RuntimeSources.mo.cmake  RuntimeSources.mo.tpl  cmake_2.8.cmake  cmake_3.14.cmake  simulation_data.h
OMCompiler/SimulationRuntime/c/cmake/: source_code_fmu_config.cmake
OMCompiler/SimulationRuntime/c/dataReconciliation/: dataReconciliation.cpp
OMCompiler/SimulationRuntime/c/fmi/: CMakeLists.txt  FMI2ModelExchange.c
OMCompiler/SimulationRuntime/c/linearization/: linearize.cpp
OMCompiler/SimulationRuntime/c/optimization/: optimizer_main.c
OMCompiler/SimulationRuntime/c/optimization/DataManagement/: InitialGuess.c  MoveData.c
OMCompiler/SimulationRuntime/c/optimization/eval_all/: EvalL.c
OMCompiler/SimulationRuntime/c/simulation/: arrayIndex.c  arrayIndex.h  modelinfo.c  simulation_info_json.c  simulation_input_xml.c  simulation_runtime.cpp
OMCompiler/SimulationRuntime/c/simulation/results/: simulation_result_mat4.cpp  simulation_result_wall.cpp
OMCompiler/SimulationRuntime/c/simulation/solver/: CMakeLists.txt  cvode_solver.c  dassl.c  delay.c  discrete.c  discrete.h  events.c  events.h  gbode_ctrl.c  gbode_main.c  gbode_step.c  ida_solver.c  irksco.c  linearSystem.c  mixedSystem.c  model_help.c  model_help.h  newton_diagnostics.c  newton_diagnostics.h  nonlinearSolverHomotopy.c  nonlinearSolverNewton.c  nonlinearSystem.c  perform_simulation.c.inc  radau.c  solver_main.c  sym_solver_ssc.c  synchronous.c
OMCompiler/SimulationRuntime/c/simulation/solver/initialization/: initialization.c
OMCompiler/SimulationRuntime/c/util/: omc_error.c  omc_error.h  simulation_options.c  simulation_options.h
OMCompiler/SimulationRuntime/cpp/omcCAPI/src/: OMC.cpp  OMCTest.cpp
OMCompiler/SimulationRuntime/fmi/export/buildproject/: configure.ac
OMCompiler/SimulationRuntime/fmi/export/openmodelica/: fmu1_model_interface.c.inc  fmu2_model_interface.c.inc  fmu_read_flags.c
OMEdit/OMEditLIB/Animation/: FMU2Wrapper.cpp  FMU2Wrapper.h  FMUWrapper.cpp  FMUWrapper.h  Shapes.cpp  Shapes.h  VisualizerFMU.cpp
testsuite/: .gitvalidfiles  Makefile
testsuite/CTest/SimulationRuntime/c/arrayIndex/unit/: 01_array_length_scalar.c  02_test_array_length_vector.c  04_collect_array_sizes.c  05_test_compute_var_index.c  CMakeLists.txt
testsuite/CTest/SimulationRuntime/c/inputXML/unit/: 01_test_read_array_input_xml.c  02_test_read_matrix_input_xml.c  03_test_read_tensor_input_xml.c
testsuite/openmodelica/fmi/CoSimulation/2.0/: Issue14456.mos
testsuite/openmodelica/fmi/ModelExchange/2.0/: fmi_attributes_15.mos  testBug2764.mos  testBug3049.mos  testDisableDep.mos  testDiscreteStructe.mos
testsuite/sanity-check/: .gitignore
testsuite/simulation/modelica/NBackend/differentation/: allTheBuildins.mos
testsuite/simulation/modelica/NBackend/init_xml/: 01_real_array_var.mos  02_int_param_array_var.mos  03_real_state_array_var.mos  04_real_matrix_var.mos  05_int_multi_dim_array_var.mos  07_array_attributes.mos  Makefile
testsuite/simulation/modelica/tearing/: Tearing01-minimal.mos  minimalTearing.mos
testsuite/special/FMPy/: Makefile  README.md
testsuite/special/FmuExportCrossCompile/: .gitignore  CMakeCrossCompile.mos  Makefile  fmuExportCrossCompile.mos  single-fmu-run.sh
